2016-05-22  Markus Gans  <guru.mail@muenster.de>
	* Fix for menus in modal dialogs

2016-05-16  Markus Gans  <guru.mail@muenster.de>
	* Improve adjustSize()
	* Implement adjustSizeGlobal() for all widgets
	* Don't focus menus with focusFirstChild() and focusLastChild()
	* Remove duplicate code

2016-05-01  Markus Gans  <guru.mail@muenster.de>
	* Better terminal identification

2016-04-30  Markus Gans  <guru.mail@muenster.de>
	* Improve 256 color terminal detection

2016-04-19  Markus Gans  <guru.mail@muenster.de>
	* Fix the missing typecast for SpecialCharacter in "ui.cpp"

2016-02-04  Markus Gans  <guru.mail@muenster.de>
	* KDE Konsole detection improved
	* OSC sequence support for GNU Screen and tmux

2016-01-31  Markus Gans  <guru.mail@muenster.de>
	* Better escape sequences readability through 
	  symbolic names like ESC, CSI or OSC

2016-01-24  Markus Gans  <guru.mail@muenster.de>
	* Moving widget flags into the class fc

2016-01-17  Markus Gans  <guru.mail@muenster.de>
	* Moving events into the class fc
	* Avoid height and width underflow in adjustSize()
	* Fix default color handling on Cygwin and Linux terminals

2016-01-10  Markus Gans  <guru.mail@muenster.de>
	* Better default color handling in FOptiAttr

2016-01-07  Markus Gans  <guru.mail@muenster.de>
	* Add the new class FOptiAttr to control video attributes and colors 
	  for output on terminals

2015-12-23  Markus Gans  <guru.mail@muenster.de>
	* Add video attribute support for dim (half-bright) and italic
	* An example program to test video attributes on your terminal

2015-12-20  Markus Gans  <guru.mail@muenster.de>
	* Add the possibility to switch off the cursor optimization 
	  for bad ANSI-terminal implementations like HyperTerminal 
	  (e.g. horizontal absolute position (ch) has there no function)
	* Now you can activate the menu with ctrl+space, too. 
	  (For terminals with no meta key support)

2015-12-20  Markus Gans  <guru.mail@muenster.de>